# gasmanonline

./: .gitattributes  .gitignore  README  README.md
.github/workflows/: build-release.yml
gasman_api/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
gasman_api/GasManWeb/: CMakeLists.txt  GasManWeb.cpp
gasman_api/convert/: CMakeLists.txt  CsvReader.h  GasManWriter.h  main.cpp
gasman_api/examples/: batch_example.py  data.json  example_1.xml  gasman_template.xlsx  matlab_example.m  octave_example.m  output.csv  python_example.py  r_example.R  simulation_minimal.csv  simulation_template.csv  test.json
gasman_api/gasmanAPI/: CMakeLists.txt  ColorUtils.cpp  ColorUtils.h  Gas.cpp  Gas.h  GasAnes.cpp  GasAnes.h  GasApplication.cpp  GasApplication.h  GasDoc.cpp  GasDoc.h  GasGlobal.cpp  GasGlobal.h  GasPtrList.h  GasSample.cpp  GasSample.h  Makefile  StringUtils.cpp  StringUtils.h  framework.h  gasman.ini  gasmanAPI.cpp  gasmanAPI.h  trim.h
gasman_api/gasmanAPI/importLibraries/: miniz.cpp
gasman_api/run/: CMakeLists.txt  XlsxReader.h  XmlToJson.h  main.cpp
src/: +=  Makefile  common.pri  gasman.pro
src/Resources/: gas.xsl  gasman.ini
src/gasanibutton/: Makefile  customwidgetplugin.cpp  customwidgetplugin.h  gasanibutton.cpp  gasanibutton.h  gasanibutton.pro  gasanibutton.ui  gasanibutton.xpm  gasanibutton_plugin.json  libgasanibutton.so.1.0.0  main.cpp
src/gasgauge/: Makefile  customwidgetplugin.cpp  customwidgetplugin.h  gasgauge.cpp  gasgauge.h  gasgauge.pro  gasgauge.xpm  gasgauge_plugin.json  libgasgauge.so.1  libgasgauge.so.1.0.0  main.cpp
src/gasgraph/: Makefile  customwidgetplugin.cpp  customwidgetplugin.h  gasgraph.cpp  gasgraph.h  gasgraph.pro  gasgraph.ui  gasgraph.xpm  gasgraph_plugin.json  gasgraph_test.cpp  gasgraph_test.h  gasgraph_test.ui  libgasgraph.so.1  libgasgraph.so.1.0.0  main.cpp
src/gasman_main/: Makefile  assistant.cpp  assistant.h  gas.cpp  gas.h  gasaboutdlg.cpp  gasaboutdlg.h  gasaboutdlg.ui  gasagentdelegate.cpp  gasagentdelegate.h  gasagentdlg.cpp  gasagentdlg.h  gasagentdlg.ui  gasanes.cpp  gasanes.h  gasapplication.cpp  gasapplication.h  gasbkpoint.cpp  gasbkpoint.h  gasbkpoint.ui  gasbookmarkdlg.cpp  gasbookmarkdlg.h  gasbookmarkdlg.ui  gascdefaults.ui  gaschildwindow.cpp  gaschildwindow.h  gaschoicesound.ui  gascontrol.cpp  gascontrol.h  gascontrol.ui  gascostdlg.cpp  gascostdlg.h  gascostdlg.ui  gasdeldlg.cpp  gasdeldlg.h  gasdeldlg.ui  gasdoc.cpp  gasdoc.h  gasdosedlg.cpp  gasdosedlg.h  (+57 more)
src/gasmchn/: Makefile  customwidgetplugin.cpp  customwidgetplugin.h  gasmchn.cpp  gasmchn.h  gasmchn.pro  gasmchn.ui  gasmchn.xpm  gasmchn_plugin.json  libgasmchn.so.1.0  libgasmchn.so.1.0.0  main.cpp
src/language/: gasman_en.qm  gasman_en.ts  gasman_fr.qm  gasman_fr.ts  gasman_ru.qm  gasman_ru.ts  gasman_zh_CN.qm  gasman_zh_CN.ts
src/rsc/: gasman.qrc  qt.conf  xml2csv.xsl  xml2excel.xsl
src/rsc/images/: splash_screen_canvas.html
src/rsc/safeCopy/: gas_zh_CN.xsl  gasman_zh_CN.ini
